corrected contrast and hamburger menu

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -33,6 +33,11 @@ nav {
     padding: 10px;
 }
 
+.join-link {
+    text-align: center;
+    color: #fff;
+}
+
 .menuLinks.open {
     display: block;
 }
